development/sf_project/force-app/main/default/objects/CarePlanTemplateGoal/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <label>Measure</label>
    <type>Text</type>
    <length>100</length>
    <description>How this goal is measured (e.g., HbA1c blood test, BP reading)</description>
    <inlineHelpText>Measurement method used to assess goal progress</inlineHelpText>
</CustomField>