development/sf_project/force-app/main/default/objects/CarePlanTemplateGoal/fields/Review_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Review_Frequency__c</fullName>
    <label>Review Frequency</label>
    <type>Picklist</type>
    <description>How often this goal should be reviewed</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>6-Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Per Visit</fullName>
            </value>
            <value>
                <fullName>Once</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>