development/sf_project/force-app/main/default/objects/CarePlanTemplateGoal/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <label>Target Value</label>
    <type>Text</type>
    <length>100</length>
    <description>Measurable target for this goal (e.g., less than 7.0%, less than 140/90 mmHg)</description>
    <inlineHelpText>Target value to achieve for this goal</inlineHelpText>
</CustomField>